--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ site: bookdown::bookdown_site
 documentclass: book
 output:
   bookdown::gitbook: default
-  #bookdown::pdf_book: default
+  #bookdown::pdf_book
 description: "This is a collection of notes on plants, growing plants, soil, water, plant nutrients, .... The output format is bookdown::gitbook."
 ---
 
