--- a/01-soil.Rmd
+++ b/01-soil.Rmd
@@ -448,7 +448,7 @@ Organic matter, iron and aluminium sesquioxides and cations, especially calcium 
 
 Most of the stuff below comes from Sparks, *Environmental Soil Chemistry*, chapter 9.
 
-### Various introductory comments
+### Introductory comments
 
 Soil acidity affects the availability of:
 
@@ -460,7 +460,7 @@ Soil acidity affects the availability of:
   
 In most soils, soil acidity is related to H and Al. The latter is more important except when pH < 4.
 
-At low pH, Al, Fe and Mn - and other transition metals metals - become more soluble and can be toxic to plants. As pH increases, they become less soluble and start to precipitate.
+As pH drops below about 5, Al, Fe and Mn - and other transition metals metals - become more soluble and can be toxic to plants. As pH increases, they become less soluble, start to precipitate and so become unavailable to plants.
 
 
 ### Al and soil acidity
@@ -469,12 +469,7 @@ Al hydrolyses in an aqueous solution - this reaction is reversible. (Hydrolysis 
 
 There's a set of reactions "starting" with [Al(H~2~O)~6~]^3+^ and "ending" with  [Al(OH)~4~(H~2~O)~2~]^1-^. The product of each hydrolysis reaction is a monomeric Al ion and H~3~O^+^. At each "step", one molecule of water is deprotonated.
 
-The start is 
-
-|        [Al(H~2~O)~6~]^3+^ + H~2~O $\rightleftharpoons$ [Al(OH)(H~2~O)~5~]^2+^ + H~3~O^+^
-
-and it just goes on from there. See below.
-
+The reaction equations and a plot showing the distribution of the Al species relative to the pH are below.
 
 ```{r echo = F, out.width = '70%', fig.align = 'center', fig.cap = 'Sparks, p. 271.'}
 
@@ -482,22 +477,7 @@ knitr::include_graphics("figs/sparks_al_equations_p271.png")
 
 ```
 
-
-Some points to notice are:
-
-- the relative concentrations of the various Al ions depend on the pH of the soil solution:
-  - if pH < 4.7 or pH > 7.5, the concentration of Al^3+^ quickly increases
-- in slightly acidic to highly acidic conditions, Al(OH)~2~^+^ and Al^3+^ predominate
-- when 5 < pH < 6.5, roughly, Al(OH)~2~^+^ predominates
-- when 5 < pH < 7.5, some Al will precipitate as Al(OH)~3~
-- the amount the pH drops owing to the production of protons as these reactions occur depends on the concentration of Al in the soil solution
-
-The soil exchange complex accepts Al^3+^ and Al(OH)~2~^+^ in preference to base cations, which are easily displaced by the Al species.
-
-If the base cations are not leached, the acid neutralisation capacity of the soil is increased. However, water percolating through the soil will mobilise the displaced base cations rather than adsorbed Al species, acid neutralisation capacity of the soil will decrease and soil acidity will increase.
-
-
-
+<br>
 
 
 ```{r echo = F, out.width = '70%', fig.align = 'center', fig.cap = 'Sparks, Fig. 9.2, p. 272. Note: This diagram differs slightly in different books depending on how it was derived.'}
@@ -508,10 +488,28 @@ knitr::include_graphics("figs/sparks_al_species_plot_fig9-2.png")
 
 <br>
 
+
+Some points to notice are:
+
+- the relative concentrations of the various Al ions depend on the pH of the soil solution:
+  - if pH < 5 or pH > 7.5, the concentration of Al^3+^ quickly increases
+  - in slightly acidic to highly acidic conditions, Al(OH)~2~^+^ and Al^3+^ predominate
+  - when pH < 5, roughly, Al^3+^ predominates
+  - when 5 < pH < 6.5, roughly, Al(OH)~2~^+^ predominates
+  - when 5 < pH < 7.5, some Al will precipitate as Al(OH)~3~
+- the amount the pH drops owing to the production of protons as these reactions occur depends on the concentration of Al in the soil solution
+
+The soil exchange complex accepts Al^3+^ and Al(OH)~2~^+^ in preference to base cations, which are easily displaced by the Al species.
+
+If the base cations are not leached, the acid neutralisation capacity of the soil is increased. However, water percolating through the soil will mobilise the displaced base cations rather than adsorbed Al species and, as a result, acid neutralisation capacity of the soil will decrease and soil acidity will increase.
+
+
+<br>
+
 Free Al^3+^ might only account for a small proportion of Al in the soil solution. There may be quite a lot bound to fluoride or sulphate ions, humic material or organic acids.
 
 
-As pH increases, the amount of Al^3+^ decreases and various monomeric (one Al atom) and polymeric (more than one Al atom) hydroxy-Al species become more common. These latter species can occur in the interlayers of smectite and vermiculite, in organic complexes and oxyhydroxide coatings on clay particles.
+As pH increases above about 5, the proportion of Al^3+^ decreases and various monomeric (one Al atom) and polymeric (more than one Al atom) hydroxy-Al species become more common. These latter species can occur in the interlayers of smectite and vermiculite, in organic complexes and oxyhydroxide coatings on clay particles.
 
 These hydroxy-Al species are non-exchangeable (because they cannot be replaced or extracted by a salt like KCl).
 
@@ -522,15 +520,15 @@ If these polymeric species are arranged around the edge of the interlayer space,
 If they are arranged throughout the interlayer space, they act as props, keeping the interlayer space open, and increase ion exchange.
 
 
-### Soil acidity - some (more) detail
+### Soil acidity - some more detail
 
 The main forms of acidity in mineral soils relate to Al; the two main forms are exchangeable (or *extractable*, since the technique used can affect the result) and nonexchangeable.
 
-Exchangeable acidity is the amount of total CEC due to H^+^, which contributes the smaller component, and Al^3+^, the larger component. 
+Exchangeable acidity is the amount of total CEC due to H^+^, which contributes the smaller component, and Al^3+^, the larger component, combined. 
 
-The amount of exchangeable acidity depends on the soil type, and so the amount of CEC due to exchangeable bases (i.e. Ca^2+^, Mg^2+^, K^+^ and Na^+^).
+The amount of exchangeable acidity depends on the soil type, and so the amount of CEC due to exchangeable bases (i.e. Ca^2+^, Mg^2+^, K^+^ and Na^+^), which varies with soil type.
 
-The proportion of exchangeable acidity out of total acidity in the minerals below decreases in this order:
+For the minerals below, the proportion of exchangeable acidity out of total acidity decreases in this order:
 
 - montmorillonite - it has mostly constant charge sites
 - dioctahedral vermiculites - a substantial amount of their acidity is nonexchangeable and made up of polymeric hydroxy-Al material in the interlayer space and depends on pH
@@ -567,7 +565,7 @@ See Essington, *Soil and Water Chemistry*, chapter 10.
 
 {p. 482}
 
-Most oxidation reactions produce protons. Most reduction reactions consume protons. **Curious!**
+Most oxidation reactions produce protons. Most reduction reactions consume protons. Curious!
 
 Systems with lots of electrons are reduced (here hydrogen will be more stable relative to water) and those depleted of electrons are oxidised  (here, oxygen will be more stable relative to water) (Essington, pp. 445 & 447).
 
@@ -618,7 +616,7 @@ The hydroxide reacts with existing H^+^ or H^+^ formed by hydrolysing Al^3+^:
 
 <br>
 
-The products are Ca^2+^, which can move onto exchange sites, and Al(OH)~3~, which precipitates, removing Al from exchange sites and the soil solution (more on this from Essington below).
+The products are Ca^2+^, which can move onto exchange sites, and Al(OH)~3~, which precipitates, removing Al from exchange sites and the soil solution.
 
 <br>
 
